--- a/manifest.json
+++ b/manifest.json
@@ -2,4 +2,10 @@
    "name": "VT by DedoCibula",
    "version": "1.0",
    "manifest_version": 2,
+   "options_page": "options.html",
+   "background": {
+      "scripts": [ "js/jquery.min.js", "js/background.js" ]
+   },
+   "permissions": [ "https://banweb.banner.vt.edu/*", "notifications" ],
+   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
