--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
    "manifest_version": 2,
    "options_page": "options.html",
    "background": {
-      "scripts": [ "js/jquery.min.js", "js/background.js" ]
+      "scripts": [ ]
    },
    "permissions": [ "https://banweb.banner.vt.edu/*", "notifications" ],
    "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
