--- a/manifest.json
+++ b/manifest.json
@@ -7,5 +7,9 @@
       "scripts": [ ]
    },
    "permissions": [ "https://banweb.banner.vt.edu/*", "notifications", "webRequest", "webRequestBlocking" ],
-   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
+   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
+   "icons": {
+      "48": "favicon.png"
+    },
+   "web_accessible_resources": ["favicon.png"]
 }
