--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
    "name": "VT by DedoCibula",
    "version": "1.0",
    "manifest_version": 2,
-   "options_page": "options.html",
+   "options_page": "index.html",
    "background": {
       "scripts": [ ]
    },
