--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,12 @@
    "version": "1.0",
    "manifest_version": 2,
    "options_page": "index.html",
+   "browser_action": {
+      "default_icon": "favicon.png",
+      "default_title": "VT Extension"
+   },
    "background": {
-      "scripts": [ ]
+      "scripts": [ "js/background.js" ]
    },
    "permissions": [ "https://banweb.banner.vt.edu/*", "notifications", "webRequest", "webRequestBlocking" ],
    "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
