--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
       "default_title": "VT Extension"
    },
    "background": {
-      "scripts": [ "js/background.js" ]
+      "scripts": [ "js/libs/jquery.min.js", "js/background.js" ]
    },
    "permissions": [ "https://banweb.banner.vt.edu/*", "notifications", "webRequest", "webRequestBlocking" ],
    "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
