--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,18 @@
 {
-   "name": "VT by DedoCibula",
-   "version": "1.0",
-   "manifest_version": 2,
-   "options_page": "index.html",
-   "browser_action": {
-      "default_icon": "favicon.png",
-      "default_title": "VT Extension"
-   },
-   "background": {
-      "scripts": [ "js/libs/jquery.min.js", "js/background.js" ]
-   },
-   "permissions": [ "https://banweb.banner.vt.edu/*", "notifications", "webRequest", "webRequestBlocking" ],
-   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
-   "icons": {
-      "48": "favicon.png"
-    },
-   "web_accessible_resources": ["favicon.png"]
+	"name": "VT by DedoCibula",
+	"version": "1.0",
+	"manifest_version": 2,
+	"description": "Never miss your VT course registration ever again...",
+	"browser_action": {
+		"default_icon": "favicon.png",
+		"default_title": "VT Extension"
+	},
+	"background": {
+		"scripts": [ "js/libs/jquery.min.js", "js/background.js" ]
+	},
+	"permissions": [ "https://banweb.banner.vt.edu/*", "notifications", "webRequest", "webRequestBlocking" ],
+	"icons": {
+		"48": "favicon.png"
+	 },
+	"web_accessible_resources": ["favicon.png"]
 }
