--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 	"name": "VT by DedoCibula",
 	"version": "1.0",
 	"manifest_version": 2,
-	"description": "Never miss your VT course registration ever again...",
+	"description": "Do not miss your VT course registration ever again...",
 	"browser_action": {
 		"default_icon": "favicon.png",
 		"default_title": "VT Extension"
