--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
 	"background": {
 		"scripts": [ "js/libs/jquery.min.js", "js/background.js" ]
 	},
-	"permissions": [ "https://banweb.banner.vt.edu/*", "https://www.registrar.vt.edu/*", "notifications", "webRequest", "webRequestBlocking" ],
+	"permissions": [ "https://banweb.banner.vt.edu/*", "http://www.registrar.vt.edu/*", "notifications", "webRequest", "webRequestBlocking" ],
 	"icons": {
 		"48": "favicon.png"
 	},
